--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -75,11 +75,11 @@ body.test {
   --tabs-background: #000;
   --tracker-background: rgb(5, 5, 5);
   --color-darkest: #000;
-  --color-bg: #1e2125;
-  --color-solid: #111;
-  --color-solid-1: #222;
-  --color-solid-2: #333;
-  --color-solid-3: #444;
+  --color-bg: rgb(30, 30, 30);
+  --color-solid: rgb(15, 15, 15);
+  --color-solid-1: rgb(25, 25, 25);
+  --color-solid-2: rgb(35, 35, 35);
+  --color-solid-3: rgb(45, 45, 45);
   --color-inverse: #fff;
   --color-inverse-1: #eee;
   --color-inverse-2: #ccc;
