--- a/src/scss/components/_share-image.scss
+++ b/src/scss/components/_share-image.scss
@@ -1,4 +1,8 @@
 .share-image-component {
+  * {
+    // border: solid 1px rgba(red, 0.5) !important;
+  }
+  font-family: Roboto;
   background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
@@ -15,6 +19,7 @@
     border-radius: 5px;
     position: relative;
     background-color: var(--color-solid);
+    color: var(--color-inverse);
     width: 95vw;
     max-width: 400px;
     min-width: 300px;
@@ -22,13 +27,56 @@
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
+
+  &.no-note {
+    .note {
+      display: none;
+    }
+    .trackers {
+      flex-grow: 1;
+      overflow: hidden;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+    &.trackers-1 {
+      .trackers .emoji-value {
+        transform: scale(2.5);
+        top: -20px;
+        width: 100%;
+        .label {
+          width: 90%;
+        }
+      }
+    }
+    &.trackers-2 {
+      .trackers {
+        align-items: center;
+        padding-top: 0;
+      }
+      .trackers .emoji-value {
+        transform: scale(1.8);
+        min-width: 50% !important;
+        .label {
+          width: 100%;
+        }
+        &:first-child {
+          margin-top: -80px;
+        }
+        &:last-child {
+          margin-top: 80px;
+        }
+      }
+    }
+  } // end no-note
+
   .date {
     padding: 16px;
 
     line-height: 100%;
     font-weight: 500;
-    color: var(--color-solid-3);
+    color: var(--color-inverse-2);
 
     .day-date {
       font-weight: 700;
@@ -46,6 +94,7 @@
     line-height: 110%;
     flex-grow: 1;
     padding: 0px 16px;
+    word-spacing: 0.09rem;
     align-items: center;
     .n-note-textualized {
       flex-grow: 1;
@@ -73,8 +122,8 @@
       flex-shrink: 0;
       border-radius: 30px;
       font-size: 24px;
-      border: solid 1px #fff;
-      background-color: transparent;
+      border: none;
+
       color: #fff;
     }
   }
@@ -95,7 +144,7 @@
       justify-content: center;
       .label {
         font-size: 0.7rem;
-        line-height: 100%;
+        line-height: 120%;
         width: 65px;
         white-space: nowrap;
         overflow: hidden;
@@ -111,12 +160,15 @@
         white-space: nowrap;
         position: absolute;
         top: 0%;
+        font-weight: bold;
+        // text-shadow: 0px 1px 1px var(--color-solid);
+        color: var(--color-inverse);
         margin-left: 1.1rem;
         font-size: 0.6rem;
         font-weight: 500;
         padding: 2px 5px;
         border-radius: 10px;
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: var(--color-translucent);
         border: solid 1px rgba(0, 0, 0, 0.1);
       }
     }
@@ -184,11 +236,10 @@
     }
   }
 
-  &.theme-dark {
+  &.theme-dark,
+  &.theme-terminal {
     --color-solid: #000;
     .note {
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
       color: #fff;
       text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
       .tracker {
