--- a/public/main.css
+++ b/public/main.css
@@ -5981,7 +5981,6 @@ body.scrolling .n-tracker-button {
     z-index: 2; }
 
 .share-image-component {
-  font-family: Roboto;
   background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
@@ -5994,6 +5993,13 @@ body.scrolling .n-tracker-button {
   justify-content: center;
   align-items: center;
   padding: 16px; }
+  .share-image-component .image-holder,
+  .share-image-component .generated {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    display: block; }
   .share-image-component .share-image-wrapper {
     border-radius: 5px;
     position: relative;
@@ -6010,28 +6016,36 @@ body.scrolling .n-tracker-button {
   .share-image-component.no-note .note {
     display: none; }
   .share-image-component.no-note .trackers {
-    flex-grow: 1;
+    flex-grow: 0;
+    height: 100%;
     overflow: hidden;
     flex-wrap: wrap;
-    align-items: center; }
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    margin-top: -40px; }
+    .share-image-component.no-note .trackers .emoji-value {
+      margin: 5px;
+      min-width: calc(30% - 5px);
+      height: auto; }
+      .share-image-component.no-note .trackers .emoji-value .label {
+        font-size: 1rem;
+        width: auto;
+        line-height: 115%;
+        margin-top: 6px; }
+      .share-image-component.no-note .trackers .emoji-value .emoji {
+        font-size: 2.5rem; }
+        @media (min-width: 600px) {
+          .share-image-component.no-note .trackers .emoji-value .emoji {
+            font-size: 2.8rem; } }
   .share-image-component.no-note.trackers-1 .trackers .emoji-value {
     transform: scale(2.5);
-    top: -20px;
     width: 100%; }
     .share-image-component.no-note.trackers-1 .trackers .emoji-value .label {
       width: 90%; }
-  .share-image-component.no-note.trackers-2 .trackers {
-    align-items: center;
-    padding-top: 0; }
   .share-image-component.no-note.trackers-2 .trackers .emoji-value {
-    transform: scale(1.8);
-    min-width: 50% !important; }
-    .share-image-component.no-note.trackers-2 .trackers .emoji-value .label {
-      width: 100%; }
-    .share-image-component.no-note.trackers-2 .trackers .emoji-value:first-child {
-      margin-top: -80px; }
-    .share-image-component.no-note.trackers-2 .trackers .emoji-value:last-child {
-      margin-top: 80px; }
+    transform: scale(1.5);
+    min-width: 40% !important; }
   .share-image-component .date {
     padding: 16px;
     line-height: 100%;
@@ -6128,6 +6142,8 @@ body.scrolling .n-tracker-button {
       text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
       .share-image-component.theme-green .note .tracker {
         color: #126818; }
+    .share-image-component.theme-green .label {
+      color: #fff; }
     .share-image-component.theme-green .date {
       color: #000; }
     .share-image-component.theme-green .nomie-logo path {
@@ -6139,6 +6155,8 @@ body.scrolling .n-tracker-button {
       text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3); }
       .share-image-component.theme-pink .note .tracker {
         color: #ff5a77; }
+    .share-image-component.theme-pink .label {
+      color: #e94151; }
     .share-image-component.theme-pink .date {
       color: #000; }
     .share-image-component.theme-pink .nomie-logo path {
