--- a/public/main.css
+++ b/public/main.css
@@ -6187,6 +6187,23 @@ body.scrolling .n-tracker-button {
     .share-image-component.theme-dark .nomie-logo path, .share-image-component.theme-terminal .nomie-logo path {
       fill: var(--color-primary-bright); }
 
+.autocomplete-results {
+  background-color: var(--color-solid-1);
+  margin: 2px;
+  border-radius: 2px; }
+  .autocomplete-results .tracker-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; }
+  .autocomplete-results .btn {
+    flex-grow: 1;
+    flex-shrink: 1;
+    box-shadow: var(--box-shadow-tight);
+    background-color: var(--color-solid);
+    margin: 4px;
+    font-size: 0.82rem;
+    padding: 5px 6px; }
+
 .input-model {
   flex-grow: 1;
   height: 100%; }
