Big update for PouchDB Support and syncing

--- a/public/main.css
+++ b/public/main.css
@@ -4846,6 +4846,17 @@ button:focus {
   .btn:active {
     transition: all 0.2s ease-in-out;
     transform: scale(0.97) !important; }
+  .btn.btn-desc {
+    text-align: left;
+    align-items: flex-start;
+    flex-direction: column; }
+    .btn.btn-desc .description {
+      font-size: 0.68rem;
+      line-height: 130%;
+      margin-bottom: 5px; }
+    .btn.btn-desc .title {
+      font-size: 1rem;
+      font-weight: 500; }
 
 .btn-primary {
   background-color: var(--color-primary-bright); }
