--- a/public/main.css
+++ b/public/main.css
@@ -5074,7 +5074,7 @@ body.no-scroll {
 
 body {
   --color-darkest: #fff;
-  --color-bg: #f9f9f9;
+  --color-bg: #eeeeee;
   --tracker-background: #fff;
   --color-inverse: #333;
   --color-inverse-1: #555;
@@ -5107,6 +5107,10 @@ body {
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
     0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.24);
+  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2),
+    -4px -4px 8px rgba(255, 255, 255, 0.9);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2),
+    -2px -2px 4px rgba(255, 255, 255, 0.9);
   --header-background: #fff;
   --modal-border: solid 1px rgba(0, 0, 0, 0.12); }
 
@@ -5168,8 +5172,8 @@ body.offline .main-content:before {
   z-index: 2000; }
 
 body.theme-dark {
-  --header-background: #000;
-  --tabs-background: #000;
+  --header-background: #111;
+  --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
   --color-darkest: #000;
   --color-bg: rgb(30, 30, 30);
@@ -5195,6 +5199,10 @@ body.theme-dark {
     0px 4px 6px -1px rgba(0, 0, 0, 0.4);
   --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06),
     0px 6px 10px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1),
+    -4px -4px 8px rgba(0, 0, 0, 0.3);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1),
+    -2px -2px 4px rgba(0, 0, 0, 0.3);
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
   --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
