--- a/public/main.css
+++ b/public/main.css
@@ -2373,6 +2373,43 @@ input[type="button"].btn-block {
     .custom-select {
       transition: none; } }
 
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 10px 0; }
+  to {
+    background-position: 0 0; } }
+
+.progress {
+  display: flex;
+  height: 10px;
+  overflow: hidden;
+  font-size: 0.8rem;
+  background-color: var(--color-faded);
+  border-radius: 10px; }
+
+.progress-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--color-solid);
+  text-align: center;
+  white-space: nowrap;
+  background-color: #20699d;
+  transition: width 0.6s ease; }
+  @media (prefers-reduced-motion: reduce) {
+    .progress-bar {
+      transition: none; } }
+
+.progress-bar-striped {
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-size: 10px 10px; }
+
+.progress-bar-animated {
+  animation: progress-bar-stripes 1s linear infinite; }
+  @media (prefers-reduced-motion: reduce) {
+    .progress-bar-animated {
+      animation: none; } }
+
 .media {
   display: flex;
   align-items: flex-start; }
