--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -64,7 +64,7 @@ body {
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2),
     -2px -2px 4px rgba(255, 255, 255, 0.9);
 
-  --header-background: rgba(255, 255, 255, 0.5);
+  --header-background: #fff;
   --modal-border: solid 1px rgba(0, 0, 0, 0.12);
 }
 
@@ -75,8 +75,8 @@ body.test {
 }
 
 @mixin darkmode {
-  --header-background: rgba(0, 0, 0, 0.6);
-  --tabs-background: rgba(0, 0, 0, 0.6);
+  --header-background: #111;
+  --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
   --color-darkest: #000;
   --color-bg: rgb(30, 30, 30);
