Addressing Blockstack issues
- Including offline notice for blockstack users.
- Excluding non-valid logs from showing up - this might cause some weirdness
- Fixing nomie-api UI elements
- Fixing bug on Stats

--- a/public/main.css
+++ b/public/main.css
@@ -6437,7 +6437,7 @@ button {
 
 .page {
   display: flex;
-  min-height: 100vh;
+  min-height: calc(100vh - 120px);
   flex-grow: 1;
   background-color: var(--color-bg); }
 
@@ -6482,6 +6482,17 @@ button {
     box-shadow: 0 0 0 10px rgba(56, 168, 63, 0); }
   100% {
     box-shadow: 0 0 0 0 rgba(56, 168, 63, 0); } }
+
+.offline-notice {
+  background-color: #e94151;
+  color: #fff;
+  font-size: 0.7rem;
+  padding: 2px 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 5000; }
 
 .badge {
   height: 22px;
