--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -100,16 +100,26 @@ body.scrolling {
     justify-content: center;
     align-items: center;
     color: var(--color-inverse);
-    height: 50px;
-    width: 120px;
-    left: 50%;
-    margin-left: -60px;
+    height: 50%;
+    min-height: 250;
+    max-height: 700px;
     border-radius: 25px;
     z-index: 2000;
+    left: 16px;
+    right: 16px;
+    width: calc(100% - 32px);
     bottom: 80px;
     border: solid 1px var(--color-faded-2);
     .zmdi {
       font-size: 1.4rem;
+    }
+    .btn {
+      position: absolute;
+      bottom: 16px;
+      left: 16px;
+      z-index: 2000;
+      border-radius: 20px;
+      padding: 6px 20px;
     }
   }
   &::after {
