--- a/public/main.css
+++ b/public/main.css
@@ -5659,16 +5659,25 @@ body.scrolling .mini-map {
     justify-content: center;
     align-items: center;
     color: var(--color-inverse);
-    height: 50px;
-    width: 120px;
-    left: 50%;
-    margin-left: -60px;
+    height: 50%;
+    min-height: 250;
+    max-height: 700px;
     border-radius: 25px;
     z-index: 2000;
+    left: 16px;
+    right: 16px;
+    width: calc(100% - 32px);
     bottom: 80px;
     border: solid 1px var(--color-faded-2); }
     .mini-map.opened .zmdi {
       font-size: 1.4rem; }
+    .mini-map.opened .btn {
+      position: absolute;
+      bottom: 16px;
+      left: 16px;
+      z-index: 2000;
+      border-radius: 20px;
+      padding: 6px 20px; }
   .mini-map::after {
     content: "";
     z-index: 20;
@@ -5920,19 +5929,20 @@ body.scrolling .n-tracker-button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: solid 1px rgba(0, 0, 0, 0.1);
-  background-color: var(--tracker-background);
+  border: none !important;
+  background-color: var(--color-bg);
   color: var(--color-inverse);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow-neu);
   border-radius: 1rem;
   width: 5.9rem;
   height: 5.9rem;
   outline: none;
   transition: all 0.2s ease-in-out; }
   .n-tracker-button:active, .n-tracker-button.pressing {
+    background-color: var(--tracker-background);
     transition: all 0.2s ease-in-out;
     transform: scale(0.95);
-    box-shadow: var(--box-shadow-tight); }
+    box-shadow: var(--box-shadow-neu); }
   .n-tracker-button.added {
     border: solid 1px rgba(56, 168, 63, 0.3); }
   .n-tracker-button .emoji {
