--- a/public/main.css
+++ b/public/main.css
@@ -5140,14 +5140,11 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
   --color-translucent: rgba(255, 255, 255, 0.89);
-  --box-shadow-tight: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
-  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
-    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
-  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2),
-    -4px -4px 8px rgba(255, 255, 255, 0.9);
-  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2),
-    -2px -2px 4px rgba(255, 255, 255, 0.9);
+  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
+  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.9);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
   --header-background: #fff;
   --modal-border: solid 1px rgba(0, 0, 0, 0.12); }
 
@@ -5230,16 +5227,11 @@ body.theme-dark {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 8px 10px rgba(0, 0, 0, 0.3);
-  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 6px 10px -1px rgba(0, 0, 0, 0.1);
-  --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1),
-    -4px -4px 8px rgba(0, 0, 0, 0.3);
-  --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1),
-    -2px -2px 4px rgba(0, 0, 0, 0.3);
+  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
   --color-translucent: rgba(0, 0, 0, 0.79); }
   body.theme-dark .n-item.border-bottom {
@@ -5930,9 +5922,9 @@ body.scrolling .n-tracker-button {
   align-items: center;
   justify-content: center;
   border: none !important;
-  background-color: var(--color-bg);
+  background-color: var(--header-background);
   color: var(--color-inverse);
-  box-shadow: var(--box-shadow-neu);
+  box-shadow: var(--box-shadow-float);
   border-radius: 1rem;
   width: 5.9rem;
   height: 5.9rem;
@@ -5942,7 +5934,7 @@ body.scrolling .n-tracker-button {
     background-color: var(--tracker-background);
     transition: all 0.2s ease-in-out;
     transform: scale(0.95);
-    box-shadow: var(--box-shadow-neu); }
+    box-shadow: var(--box-shadow-tight); }
   .n-tracker-button.added {
     border: solid 1px rgba(56, 168, 63, 0.3); }
   .n-tracker-button .emoji {
