--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -2,8 +2,7 @@ html,
 body {
   -webkit-user-select: none;
   -webkit-touch-callout: none;
-  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu,
-    Cantarell, "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-text-size-adjust: auto;
   box-sizing: border-box;
   margin: 0;
@@ -55,14 +54,11 @@ body {
   --color-background-selected: #{rgba($primary, 0.1)};
   --color-translucent: rgba(255, 255, 255, 0.89);
 
-  --box-shadow-tight: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
-  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08),
-    0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
-  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2),
-    -4px -4px 8px rgba(255, 255, 255, 0.9);
-  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2),
-    -2px -2px 4px rgba(255, 255, 255, 0.9);
+  --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
+  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.9);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
 
   --header-background: #fff;
   --modal-border: solid 1px rgba(0, 0, 0, 0.12);
@@ -96,17 +92,12 @@ body.test {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 8px 10px rgba(0, 0, 0, 0.3);
-  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06),
-    0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
 
-  --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1),
-    -4px -4px 8px rgba(0, 0, 0, 0.3);
-  --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1),
-    -2px -2px 4px rgba(0, 0, 0, 0.3);
+  --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
+  --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
 
   --modal-border: solid 1px rgba(255, 255, 255, 0.12);
 
@@ -120,21 +111,9 @@ body.test {
     //$background, $border, $hover-background: darken($background, 7.5%),
     // $hover-border: darken($border, 10%),
     // $active-background: darken($background, 10%), $active-border: darken($border, 12.5%)
-    @include button-variant(
-      #333,
-      darken(#333, 5%),
-      darken(#333, 5%),
-      darken(#333, 5%),
-      rgba($primaryBright, 5%)
-    );
+    @include button-variant(#333, darken(#333, 5%), darken(#333, 5%), darken(#333, 5%), rgba($primaryBright, 5%));
     &:hover {
-      @include button-variant(
-        #333,
-        darken(#333, 10%),
-        darken(#333, 10%),
-        darken(#333, 10%),
-        rgba($primaryBright, 10%)
-      );
+      @include button-variant(#333, darken(#333, 10%), darken(#333, 10%), darken(#333, 10%), rgba($primaryBright, 10%));
     }
   }
 }
