--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -13,9 +13,9 @@ body.scrolling .n-tracker-button {
   justify-content: center;
   // border: solid 1px rgba(0, 0, 0, 0.1);
   border: none !important;
-  background-color: var(--color-bg);
+  background-color: var(--header-background);
   color: var(--color-inverse);
-  box-shadow: var(--box-shadow-neu);
+  box-shadow: var(--box-shadow-float);
   border-radius: 1rem;
   width: 5.9rem;
   height: 5.9rem;
@@ -28,7 +28,7 @@ body.scrolling .n-tracker-button {
     transition: all 0.2s ease-in-out;
     transform: scale(0.95);
     // box-shadow: var(--box-shadow-tight);
-    box-shadow: var(--box-shadow-neu);
+    box-shadow: var(--box-shadow-tight);
   }
 
   &.added {
