--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -15,7 +15,7 @@ body.scrolling .n-tracker-button {
   border: none !important;
   background-color: var(--header-background);
   color: var(--color-inverse);
-  box-shadow: var(--box-shadow-float);
+  box-shadow: var(--box-shadow);
   border-radius: 1rem;
   width: 5.9rem;
   height: 5.9rem;
