--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -106,8 +106,8 @@ select {
 }
 
 .search-input {
-  border-radius: 20px;
-  padding: 0px 16px;
+  border-radius: 40px !important;
+  padding: 0px 16px !important;
   height: 36px;
   border: solid 1px transparent;
   background-color: var(--color-faded);
