--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import "./components/tracker-input-modal";
 @import "./components/tracker-button";
 @import "./components/share-image";
+@import "./components/grid";
 
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
@@ -196,20 +197,16 @@ $night: #311f62;
 
 .glow {
   &.glow-morning {
-    box-shadow: 0px 2px 24px -10px rgba($morning, 0.2),
-      0px 3px 10px -2px rgba($morning-alt, 0.1) !important;
+    box-shadow: 0px 2px 24px -10px rgba($morning, 0.2), 0px 3px 10px -2px rgba($morning-alt, 0.1) !important;
   }
   &.glow-afternoon {
-    box-shadow: 0px 2px 24px -10px rgba($afternoon, 0.1),
-      0px 3px 10px -2px rgba($afternoon-alt, 0.1) !important;
+    box-shadow: 0px 2px 24px -10px rgba($afternoon, 0.1), 0px 3px 10px -2px rgba($afternoon-alt, 0.1) !important;
   }
   &.glow-evening {
-    box-shadow: 0px 2px 24px -10px rgba($evening, 0.1),
-      0px 3px 10px -2px rgba($evening-alt, 0.1) !important;
+    box-shadow: 0px 2px 24px -10px rgba($evening, 0.1), 0px 3px 10px -2px rgba($evening-alt, 0.1) !important;
   }
   &.glow-night {
-    box-shadow: 0px 2px 24px -10px rgba($night, 0.2),
-      0px 3px 10px -2px rgba($night-alt, 0.2) !important;
+    box-shadow: 0px 2px 24px -10px rgba($night, 0.2), 0px 3px 10px -2px rgba($night-alt, 0.2) !important;
   }
 }
 
