--- a/public/main.css
+++ b/public/main.css
@@ -6250,7 +6250,7 @@ body.scrolling .n-tracker-button {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  max-width: 100%;
+  max-width: 680px;
   min-height: 30vh;
   padding: 10px 0;
   align-items: flex-start;
