--- a/src/scss/components/grid.scss
+++ b/src/scss/components/grid.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  max-width: 100%;
+  max-width: 680px;
   min-height: 30vh;
   padding: 10px 0;
   align-items: flex-start;
