--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "./components/tracker-button";
 @import "./components/share-image";
 @import "./components/grid";
+@import "./components/app-panel";
 
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
