--- a/public/main.css
+++ b/public/main.css
@@ -5786,16 +5786,20 @@ body.scrolling .mini-map {
   .n-item .main {
     flex-grow: 1;
     flex-shrink: 1; }
-    .n-item .main h4 {
-      font-size: 1.14rem;
+    .n-item .main h4,
+    .n-item .main .title {
+      font-size: 1.1rem;
       margin: 2px 0;
       line-height: 1.56rem; }
-    .n-item .main p {
+    .n-item .main p,
+    .n-item .main .description {
       margin: 2px 0;
       color: var(--color-inverse-3);
       line-height: 140%;
       font-size: 0.9rem; }
-      .n-item .main p.sm, .n-item .main p.small {
+      .n-item .main p.sm, .n-item .main p.small,
+      .n-item .main .description.sm,
+      .n-item .main .description.small {
         font-size: 0.8rem; }
   .n-item .left .btn-icon,
   .n-item .right .btn-icon {
@@ -6255,6 +6259,49 @@ body.scrolling .n-tracker-button {
   padding: 10px 0;
   align-items: flex-start;
   justify-content: space-evenly; }
+
+aside.n-panel {
+  width: 20%;
+  max-width: 320px !important;
+  min-width: 240px !important; }
+
+.n-panel {
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow: hidden; }
+  .n-panel.border-right {
+    border-right: solid 1px rgba(0, 0, 0, 0.1); }
+  .n-panel.center-vertical {
+    justify-content: center; }
+  .n-panel.center-all {
+    justify-content: center;
+    align-items: center; }
+  .n-panel.border-left {
+    border-left: solid 1px rgba(0, 0, 0, 0.1); }
+  .n-panel.border-top {
+    border-top: solid 1px rgba(0, 0, 0, 0.1); }
+  .n-panel.n-panel-fixed {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+  .n-panel.column, .n-panel.vertical {
+    flex-direction: column; }
+  .n-panel.row, .n-panel.horizontal {
+    flex-direction: row; }
+  .n-panel.scroll-y {
+    overflow-y: auto; }
+  .n-panel.scroll-x {
+    overflow-x: auto; }
+  .n-panel.n-panel-30 {
+    max-width: 30%; }
+  .n-panel.n-panel-20 {
+    max-width: 20%; }
+  .n-panel.n-panel-25 {
+    max-width: 25%; }
 
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
