--- a/src/scss/components/app-panel.scss
+++ b/src/scss/components/app-panel.scss
@@ -22,6 +22,10 @@ aside.n-panel {
     justify-content: center;
   }
 
+  &.center-horizontal {
+    align-items: center;
+  }
+
   &.center-all {
     justify-content: center;
     align-items: center;
