--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -57,7 +57,7 @@ body {
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
-  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.9);
+  --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
 
   --header-background: #fff;
@@ -68,6 +68,10 @@ body.test {
   * {
     border: solid 1px rgba(red, 0.6) !important;
   }
+}
+
+.bold {
+  font-weight: bold;
 }
 
 @mixin darkmode {
