--- a/public/main.css
+++ b/public/main.css
@@ -4871,6 +4871,9 @@ button:focus {
 .btn-group .btn:active {
   color: var(--color-primary) !important; }
 
+.btn:disabled {
+  opacity: 0.3; }
+
 .btn {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
@@ -5056,6 +5059,9 @@ button:focus {
 .bg-faded {
   background-color: var(--color-faded) !important; }
 
+.bg-bg {
+  background-color: var(--color-bg); }
+
 .btn-round {
   border-radius: 20px; }
   .btn-round.btn-lg, .btn-group-lg > .btn-round.btn {
@@ -5143,13 +5149,16 @@ body {
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
-  --box-shadow-neu: 4px 4px 8px rgba(0, 0, 0, 0.2), -4px -4px 8px rgba(255, 255, 255, 0.9);
+  --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
   --header-background: #fff;
   --modal-border: solid 1px rgba(0, 0, 0, 0.12); }
 
 body.test * {
   border: solid 1px rgba(255, 0, 0, 0.6) !important; }
+
+.bold {
+  font-weight: bold; }
 
 body {
   background-color: var(--color-bg); }
@@ -5344,16 +5353,16 @@ body.theme-dark {
   font-size: 1.4rem; }
 
 .text-faded {
-  color: var(--color-faded); }
+  color: var(--color-faded) !important; }
 
 .text-faded-1 {
-  color: var(--color-faded-1); }
+  color: var(--color-faded-1) !important; }
 
 .text-faded-2 {
-  color: var(--color-faded-2); }
+  color: var(--color-faded-2) !important; }
 
 .text-faded-3 {
-  color: var(--color-faded-3); }
+  color: var(--color-faded-3) !important; }
 
 .text-xs {
   font-size: 0.5rem !important;
@@ -5412,11 +5421,14 @@ input[type="password"] {
 .form-control:focus {
   box-shadow: none !important; }
 
-input.form-control {
-  background-color: var(--color-faded-1);
-  border-color: var(--color-solid-1);
+input.form-control,
+select.form-control {
+  border-radius: 0.4rem !important;
+  background-color: var(--color-faded-1) !important;
+  border-color: var(--color-solid-1) !important;
   color: var(--color-inverse-2); }
-  input.form-control:focus {
+  input.form-control:focus,
+  select.form-control:focus {
     background-color: var(--color-faded);
     color: var(--color-inverse-2); }
 
@@ -5440,7 +5452,6 @@ select {
   color: var(--color-inverse) !important;
   border: transparent !important;
   border-radius: 0 !important;
-  border-bottom: solid 1px var(--color-inverse-3) !important;
   position: relative; }
 
 .input-group {
@@ -5792,12 +5803,15 @@ body.scrolling .mini-map {
       margin: 2px 0;
       line-height: 1.56rem; }
     .n-item .main p,
+    .n-item .main .note,
     .n-item .main .description {
       margin: 2px 0;
       color: var(--color-inverse-3);
       line-height: 140%;
       font-size: 0.9rem; }
       .n-item .main p.sm, .n-item .main p.small,
+      .n-item .main .note.sm,
+      .n-item .main .note.small,
       .n-item .main .description.sm,
       .n-item .main .description.small {
         font-size: 0.8rem; }
@@ -5817,8 +5831,6 @@ body.scrolling .mini-map {
   .n-item .right span {
     font-size: 0.9rem; }
   .n-item .right select {
-    min-width: 190px;
-    width: 190px;
     text-align: right; }
   .n-item .right .form-control {
     width: 190px; }
@@ -6283,6 +6295,8 @@ aside.n-panel {
     border-right: solid 1px rgba(0, 0, 0, 0.1); }
   .n-panel.center-vertical {
     justify-content: center; }
+  .n-panel.center-horizontal {
+    align-items: center; }
   .n-panel.center-all {
     justify-content: center;
     align-items: center; }
@@ -6326,8 +6340,28 @@ TODO: Organize main into components or containers.
 .text-underline {
   text-decoration: underline !important; }
 
+.opacity-0 {
+  opacity: 0; }
+
+.opacity-1 {
+  opacity: 0.1; }
+
+.opacity-2 {
+  opacity: 0.2; }
+
+.opacity-3 {
+  opacity: 0.3; }
+
 .container-sm {
-  max-width: 800px; }
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.container-xs {
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%; }
 
 .click-thru {
   display: block;
@@ -6441,6 +6475,12 @@ TODO: Organize main into components or containers.
 .glow.glow-night {
   box-shadow: 0px 2px 24px -10px rgba(49, 31, 98, 0.2), 0px 3px 10px -2px rgba(195, 114, 124, 0.2) !important; }
 
+.n-toolbar h1,
+.n-toolbar h2,
+.n-toolbar h3 {
+  font-size: 1.1rem;
+  margin-bottom: 0; }
+
 .card {
   border-radius: 0.5rem;
   display: flex;
@@ -6449,13 +6489,22 @@ TODO: Organize main into components or containers.
   .card .card-body {
     padding: 16px;
     min-height: 0; }
+  .card .footer {
+    padding: 16px !important; }
+    .card .footer button {
+      margin-right: 8px !important;
+      margin-left: 8px !important; }
+      .card .footer button:first-child {
+        margin-left: 0px !important; }
+      .card .footer button:last-child {
+        margin-right: 0px !important; }
   .card p,
   .card .card-body {
     font-size: 0.9rem; }
   .card .card-title {
-    padding: 11.2px 16px;
+    padding: 16px;
     font-weight: bold;
-    font-size: 1.2rem; }
+    font-size: 1rem; }
 
 .mw-500px {
   max-width: 500px !important; }
