--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -121,6 +121,7 @@ body.scrolling {
     width: calc(100% - 32px);
     bottom: 80px;
     border: solid 1px var(--color-faded-2);
+    box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.4);
     .zmdi {
       font-size: 1.4rem;
     }
