General clean up

--- a/src/scss/components/_tracker-button.scss
+++ b/src/scss/components/_tracker-button.scss
@@ -35,7 +35,7 @@ body.scrolling .n-tracker-button {
     position: absolute;
     height: 4px;
     border-radius: 2px;
-    background-color: var(--color-faded);
+    background-color: var(--color-faded-1);
     opacity: 0.3;
     bottom: 2px;
     left: 19%;
